--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,29 +1,29 @@
 .price {
   background-image: linear-gradient(175.5deg, #ffffff, #ffffff 64px, #f2f2f2 64px, #f2f2f2);
   margin-bottom: 40px;
+}
 
-  &__wrapper {
-    margin: 0 auto;
-  }
+.price__wrapper {
+  margin: 0 auto;
+}
 
-  &__toggles {
-    margin: 0 auto;
-    padding-bottom: 62px;
-  }
+.price__toggles {
+  margin: 0 auto;
+  padding-bottom: 62px;
 }
 
 @media (min-width: 660px) {
   .price {
     padding-bottom: 30px;
     margin-bottom: 44px;
+  }
 
-    &__wrapper {
-      padding: 0 20px;
-    }
+  .price__wrapper {
+    padding: 0 20px;
+  }
 
-    &__toggles {
-      display: none;
-    }
+  .price__toggles {
+    display: none;
   }
 }
 
