--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -1,11 +1,13 @@
-.reviews {
-  &__toggles {
-    margin: 0 auto;
-  }
+.reviews__toggles {
+  margin: 0 auto;
 }
 
 @media (min-width: 960px) {
   .reviews {
     margin-bottom: 10px;
+  }
+
+  .reviews__wrapper {
+    position: relative;
   }
 }
