--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -7,7 +7,6 @@
 @media (min-width: 960px) {
   .site-list {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
     width: 620px;
     padding-top: 5px;
@@ -39,10 +38,10 @@
     &:last-child {
       box-shadow: none;
     }
+  }
 
-    &__upper {
-      text-transform: uppercase;
-    }
+  .site-list__item__upper {
+    text-transform: uppercase;
   }
 }
 
