--- a/source/less/style.less
+++ b/source/less/style.less
@@ -5,7 +5,7 @@
 @import "blocks/scaffolding.less";
 @import "blocks/page-header.less";
 @import "blocks/main-nav.less";
-@import "blocks/.site-list.less";
+@import "blocks/site-list.less";
 @import "blocks/download.less";
 @import "blocks/advantages.less";
 @import "blocks/main-form.less";
