--- a/source/less/blocks/timer.less
+++ b/source/less/blocks/timer.less
@@ -56,7 +56,7 @@
     padding-left: 310px;
   }
 
-  .timer__paragraf__desctop {
+  .timer__desctop {
     display: none;
   }
 
@@ -125,11 +125,11 @@
     padding-left: 368px;
   }
 
-  .timer__paragraf__tablet {
+  .timer__tablet {
     display: none;
   }
 
-  .timer__paragraf__desctop {
+  .timer__desctop {
     display: block;
   }
 
