--- a/source/less/blocks/app.less
+++ b/source/less/blocks/app.less
@@ -9,18 +9,18 @@
   border: none;
   margin: 0;
   padding: 0;
+}
 
-  & legend {
-    display: block;
-    width: 189px;
-    font-family: "Open Sans", "Arial", sans-serif;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 14px;
-    line-height: 18px;
-    font-weight: normal;
-    color: #d22856;
-  }
+.form__app legend {
+  display: block;
+  width: 189px;
+  font-family: "Open Sans", "Arial", sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: normal;
+  color: #d22856;
 }
 
 .app__wrapper {
@@ -90,10 +90,10 @@
     padding-top: 8px;
     padding-left: 39px;
     padding-bottom: 14px;
+  }
 
-    & legend {
-      width: 368px;
-    }
+  .form__app legend {
+    width: 368px;
   }
 
   .app__mark {
