--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,10 +1,12 @@
 .contacts {
+  position: relative;
+  z-index: 3;
   padding-bottom: 100px;
   background-image: linear-gradient(192deg, #ffffff, #ffffff 395px, transparent 395px, transparent),
     linear-gradient(168deg, #ffffff, #ffffff 395px, transparent 395px, transparent);
-  background-size: 160px 446px, 160px 446px;
+  background-size: 50% 446px, 50% 446px;
   background-repeat: no-repeat, no-repeat;
-  background-position: 0 0, 160px 0;
+  background-position: 0 0, 100% 0;
 }
 
 .contacts__manifest {
