--- a/source/less/blocks/scaffolding.less
+++ b/source/less/blocks/scaffolding.less
@@ -54,6 +54,26 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 
+.container {
+  box-sizing: border-box;
+  width: 320px;
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
+@media (min-width: 660px) {
+  .container {
+    width: 660px;
+  }
+}
+
+@media (min-width: 960px) {
+  .container {
+    width: 960px;
+    padding: 0 10px;
+  }
+}
+
 .form__wrapper {
   padding-left: 20px;
   padding-right: 20px;
