--- a/source/less/style.less
+++ b/source/less/style.less
@@ -7,6 +7,8 @@
 @import "blocks/main-nav.less";
 @import "blocks/site-list.less";
 @import "blocks/download.less";
+@import "blocks/button.less";
+@import "blocks/icon-list.less";
 @import "blocks/advantages.less";
 @import "blocks/main-form.less";
 @import "blocks/form__personal.less";
@@ -20,3 +22,4 @@
 @import "blocks/price.less";
 @import "blocks/slider-price.less";
 @import "blocks/contacts.less";
+@import "blocks/map.less";
