--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,6 +1,7 @@
 .map {
   position: relative;
   margin-top: -140px;
+  margin-bottom: 220px;
 }
 
 .map__image {
@@ -20,6 +21,10 @@
 }
 
 @media (min-width: 660px) {
+  .map {
+    margin-bottom: 375px;
+  }
+
   .map__image {
     width: 100%;
     height: 375px;
