--- a/source/less/style.less
+++ b/source/less/style.less
@@ -23,3 +23,4 @@
 @import "blocks/slider-price.less";
 @import "blocks/contacts.less";
 @import "blocks/map.less";
+@import "blocks/page-footer.less";
