--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -58,6 +58,12 @@
 }
 
 @media (min-width: 660px) {
+  .contacts {
+    padding-bottom: 100px;
+    background-image: linear-gradient(192deg, #ffffff, #ffffff 418px, transparent 418px, transparent),
+      linear-gradient(168deg, #ffffff, #ffffff 418px, transparent 418px, transparent);
+  }
+
   .contacts__manifest {
     width: 370px;
     font-size: 40px;
