--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -5,10 +5,25 @@
 @media (min-width: 660px) {
   .page-footer {
     display: block;
+    padding-bottom: 40px;
   }
 
   .page-footer__wrapper {
     display: flex;
     flex-wrap: wrap;
+  }
+
+  .page-footer__logo-tablet {
+    margin-right: 73px;
+
+    &--pink{
+      &:hover {
+        fill: #d22856;
+      }
+    }
+  }
+
+  .page-footer__social {
+    margin-right: 50px;
   }
 }
