--- a/source/less/blocks/slider-price.less
+++ b/source/less/blocks/slider-price.less
@@ -4,13 +4,13 @@
   padding-top: 130px;
 }
 
-/*.slider-price__wrapper {
+.slider-price__wrapper {
   padding-top: 14px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 13px;
-}*/
+}
 
 .slider-price__option {
   margin-left: 22px;
@@ -71,8 +71,6 @@
   border-left: 2px solid #e5e5e5;
   border-right: 2px solid #e5e5e5;
   width: 280px;
-  display: flex;
-  justify-content: space-between;
 }
 
 .slider-price__second-title {
@@ -101,8 +99,6 @@
   border-bottom: 2px solid #e5e5e5;
   border-right: 2px solid #e5e5e5;
   width: 280px;
-  display: flex;
-  justify-content: space-between;
 }
 
 .slider-price__third-title {
@@ -150,8 +146,6 @@
   border-bottom: 2px solid #e5e5e5;
   border-right: 2px solid #e5e5e5;
   width: 280px;
-  display: flex;
-  justify-content: space-between;
 }
 
 .slider-price__fourth-title {
