--- a/source/less/style.less
+++ b/source/less/style.less
@@ -24,3 +24,5 @@
 @import "blocks/contacts.less";
 @import "blocks/map.less";
 @import "blocks/page-footer.less";
+@import "blocks/social.less";
+@import "blocks/copyright.less";
