--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -1,6 +1,6 @@
 .map {
   position: relative;
-  margin-top: -90px;
+  margin-top: -35px;
   margin-bottom: 220px;
 }
 
@@ -23,7 +23,7 @@
 
 @media (min-width: 660px) {
   .map {
-    margin-top: -122px;
+    margin-top: -69px;
     margin-bottom: 411px;
   }
 
@@ -42,6 +42,11 @@
 }
 
 @media (min-width: 960px) {
+  .map {
+    margin-top: -99px;
+    margin-bottom: 567px;
+  }
+
   .map__image {
     height: 500px;
   }
