--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,12 +1,20 @@
 .contacts {
   position: relative;
   z-index: 3;
-  padding-bottom: 100px;
-  background-image: linear-gradient(192deg, #ffffff, #ffffff 395px, transparent 395px, transparent),
-    linear-gradient(168deg, #ffffff, #ffffff 395px, transparent 395px, transparent);
-  background-size: 50% 446px, 50% 446px;
-  background-repeat: no-repeat, no-repeat;
-  background-position: 0 0, 100% 0;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 35px;
+    background-image: linear-gradient(192deg, #ffffff, #ffffff 35px, transparent 35px, transparent),
+      linear-gradient(168deg, #ffffff, #ffffff 35px, transparent 35px, transparent);
+    background-size: 50% 35px, 50% 35px;
+    background-repeat: no-repeat, no-repeat;
+    background-position: 0 0, 100% 0;
+  }
 }
 
 .contacts__manifest {
@@ -23,6 +31,7 @@
 .contacts__addres {
   .reset_ul();
   margin: 0 auto;
+  padding-bottom: 50px;
 }
 
 .contacts__content {
@@ -59,9 +68,12 @@
 
 @media (min-width: 660px) {
   .contacts {
-    padding-bottom: 100px;
-    background-image: linear-gradient(192deg, #ffffff, #ffffff 418px, transparent 418px, transparent),
-      linear-gradient(168deg, #ffffff, #ffffff 418px, transparent 418px, transparent);
+    &::after {
+      height: 69px;
+      background-image: linear-gradient(192deg, #ffffff, #ffffff 69px, transparent 69px, transparent),
+        linear-gradient(168deg, #ffffff, #ffffff 69px, transparent 69px, transparent);
+      background-size: 50% 69px, 50% 69px;
+    }
   }
 
   .contacts__manifest {
@@ -75,6 +87,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding-bottom: 48px;
   }
 
   .contacts__content {
@@ -88,6 +101,15 @@
 }
 
 @media (min-width: 960px) {
+  .contacts {
+    &::after {
+      height: 100px;
+      background-image: linear-gradient(190deg, #ffffff, #ffffff 100px, transparent 100px, transparent),
+        linear-gradient(170deg, #ffffff, #ffffff 100px, transparent 100px, transparent);
+      background-size: 50% 100px, 50% 100px;
+    }
+  }
+
   .contacts__manifest {
     width: 470px;
     font-size: 50px;
@@ -111,5 +133,9 @@
 
   .contacts__name {
     margin-bottom: 25px;
+  }
+
+  .contacts__addres {
+    padding-bottom: 80px;
   }
 }
