--- a/source/less/style.less
+++ b/source/less/style.less
@@ -21,6 +21,7 @@
 @import "blocks/slider.less";
 @import "blocks/price.less";
 @import "blocks/slider-price.less";
+@import "blocks/slider-price__toggles.less";
 @import "blocks/contacts.less";
 @import "blocks/map.less";
 @import "blocks/page-footer.less";
