--- a/source/less/blocks/slider-price.less
+++ b/source/less/blocks/slider-price.less
@@ -13,24 +13,13 @@
 }
 
 .slider-price__option {
-  margin-left: 22px;
+  padding-left: 22px;
+  padding-top: 10px;
+  padding-bottom: 10px;
   font-weight: normal;
   line-height: 30px;
   color: #283645;
   text-transform: uppercase;
-}
-
-.slider-price__yes {
-  width: 29px;
-  height: 27px;
-  margin-right: 15px;
-}
-
-.slider-price__no {
-  width: 27px;
-  height: 26px;
-  margin-top: -4px;
-  margin-right: 15px;
 }
 
 .slider-price__list {
@@ -67,10 +56,44 @@
 }
 
 .slider-price__second-column {
+  display: table-cell;
+  position: relative;
   border-bottom: 2px solid #e5e5e5;
   border-left: 2px solid #e5e5e5;
   border-right: 2px solid #e5e5e5;
   width: 280px;
+  padding-top: 15px;
+  padding-bottom: 14px;
+
+  &--yes {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 19px;
+      right: 15px;
+      width: 32px;
+      height: 21px;
+      background-image: url("../img/icon-yes.svg");
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      background-size: 32px 21px;
+    }
+  }
+
+  &--no {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 15px;
+      right: 17px;
+      width: 29px;
+      height: 26px;
+      background-image: url("../img/icon-no.svg");
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      background-size: 29px 26px;
+    }
+  }
 }
 
 .slider-price__second-title {
@@ -96,9 +119,43 @@
 }
 
 .slider-price__third-column {
+  display: table-cell;
+  position: relative;
   border-bottom: 2px solid #e5e5e5;
   border-right: 2px solid #e5e5e5;
   width: 280px;
+  padding-top: 15px;
+  padding-bottom: 14px;
+
+  &--yes {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 19px;
+      right: 15px;
+      width: 32px;
+      height: 21px;
+      background-image: url("../img/icon-yes.svg");
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      background-size: 32px 21px;
+    }
+  }
+
+  &--no {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 15px;
+      right: 17px;
+      width: 29px;
+      height: 26px;
+      background-image: url("../img/icon-no.svg");
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      background-size: 29px 26px;
+    }
+  }
 }
 
 .slider-price__third-title {
@@ -143,9 +200,43 @@
 }
 
 .slider-price__fourth-column {
+  display: table-cell;
+  position: relative;
   border-bottom: 2px solid #e5e5e5;
   border-right: 2px solid #e5e5e5;
   width: 280px;
+  padding-top: 15px;
+  padding-bottom: 14px;
+
+  &--yes {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 19px;
+      right: 15px;
+      width: 32px;
+      height: 21px;
+      background-image: url("../img/icon-yes.svg");
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      background-size: 32px 21px;
+    }
+  }
+
+  &--no {
+    &::after {
+      content: "";
+      position: absolute;
+      top: 15px;
+      right: 17px;
+      width: 29px;
+      height: 26px;
+      background-image: url("../img/icon-no.svg");
+      background-repeat: no-repeat;
+      background-position: 50% 50%;
+      background-size: 29px 26px;
+    }
+  }
 }
 
 .slider-price__fourth-title {
@@ -183,14 +274,6 @@
     display: none;
   }
 
-  .slider-price__yes {
-    margin-right: 0;
-  }
-
-  .slider-price__no {
-    margin-right: 0;
-  }
-
   .slider-price__list {
     width: 620px;
 
@@ -207,9 +290,12 @@
     display: table-cell;
     text-transform: none;
     background-color: #ffffff;
+    line-height: 30px;
+    font-weight: normal;
+    color: #283645;
     padding-left: 17px;
-    padding-top: 0;
-    padding-bottom: 0;
+    padding-top: 7px;
+    padding-bottom: 8px;
   }
 
   .slider-price__first-title {
@@ -220,6 +306,20 @@
   .slider-price__second-column {
     width: 155px;
     background-color: #ffffff;
+
+    &--yes {
+      &::after {
+        top: 14px;
+        right: 56px;
+      }
+    }
+
+    &--no {
+      &::after {
+        top: 8px;
+        right: 58px;
+      }
+    }
   }
 
   .slider-price__second-title {
@@ -238,6 +338,20 @@
   .slider-price__third-column {
     width: 155px;
     background-color: #ffffff;
+
+    &--yes {
+      &::after {
+        top: 13px;
+        right: 56px;
+      }
+    }
+
+    &--no {
+      &::after {
+        top: 8px;
+        right: 58px;
+      }
+    }
   }
 
   .slider-price__third-title {
@@ -269,6 +383,20 @@
   .slider-price__fourth-column {
     width: 155px;
     background-color: #ffffff;
+
+    &--yes {
+      &::after {
+        top: 12px;
+        right: 56px;
+      }
+    }
+
+    &--no {
+      &::after {
+        top: 8px;
+        right: 58px;
+      }
+    }
   }
 
   .slider-price__fourth-title {
@@ -303,7 +431,25 @@
 
   .slider-price__first-column {
     font-size: 18px;
-    padding-left: 21px;
+    padding-left: 23px;
+    padding-top: 13px;
+    padding-bottom: 16px;
+  }
+
+  .slider-price__second-column {
+    &--yes {
+      &::after {
+        top: 21px;
+        right: 96px;
+      }
+    }
+
+    &--no {
+      &::after {
+        top: 14px;
+        right: 98px;
+      }
+    }
   }
 
   .slider-price__second-title {
@@ -316,6 +462,22 @@
     line-height: 30px;
     padding-top: 2px;
     padding-bottom: 20px;
+  }
+
+  .slider-price__third-column {
+    &--yes {
+      &::after {
+        top: 21px;
+        right: 96px;
+      }
+    }
+
+    &--no {
+      &::after {
+        top: 14px;
+        right: 98px;
+      }
+    }
   }
 
   .slider-price__third-title {
@@ -340,6 +502,22 @@
     line-height: 30px;
     padding-top: 2px;
     padding-bottom: 20px;
+  }
+
+  .slider-price__fourth-column {
+    &--yes {
+      &::after {
+        top: 21px;
+        right: 96px;
+      }
+    }
+
+    &--no {
+      &::after {
+        top: 14px;
+        right: 98px;
+      }
+    }
   }
 
   .slider-price__fourth-title {
