--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -5,7 +5,6 @@
 @media (min-width: 660px) {
   .page-footer {
     display: block;
-    padding-bottom: 40px;
   }
 
   .page-footer__wrapper {
@@ -13,17 +12,48 @@
     flex-wrap: wrap;
   }
 
-  .page-footer__logo-tablet {
+  .page-footer__logo {
+    width: 150px;
     margin-right: 73px;
 
-    &--pink{
-      &:hover {
-        fill: #d22856;
-      }
+    &:active {
+      opacity: 0.3;
     }
+  }
+
+  .page-footer__logo:hover path,
+  .page-footer__logo:focus path {
+    fill: #d22856;
+    cursor: pointer;
+  }
+
+  .page-footer__logo-tablet {
+    display: block;
+  }
+
+  .page-footer__logo-desktop {
+    display: none;
   }
 
   .page-footer__social {
     margin-right: 50px;
+  }
+}
+
+@media (min-width: 960px) {
+  .page-footer__wrapper {
+    justify-content: space-between;
+  }
+
+  .page-footer__logo {
+    margin-right: 0;
+  }
+
+  .page-footer__logo-tablet {
+    display: none;
+  }
+
+  .page-footer__logo-desktop {
+    display: block;
   }
 }
