--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -39,6 +39,12 @@
   background-color: #283645;
 }
 
+@media (min-width: 960px) {
+  .page-header--color-menu {
+    background-color: rgba(0, 0, 0, 0.3);
+  }
+}
+
 .page-header--nojs {
   background-color: #283645;
 }
@@ -57,15 +63,14 @@
 @media (min-width: 660px) {
   .page-header__logo {
     width: 170px;
-    min-height: 110px;
-    padding-top: 24px;
+    min-height: 109px;
+    padding-top: 26px;
     padding-left: 20px;
   }
 }
 
 @media (min-width: 960px) {
   .page-header__logo {
-    //margin-right: 169px;
     padding-left: 0;
     padding-top: 0;
     min-height: 85px;
