--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -31,7 +31,7 @@
     }
 
     &:active {
-      opacity: 0.1;
+      opacity: 0.2;
     }
 
     &--twitter {
@@ -45,5 +45,12 @@
     &--youtube {
       background-image: url("../img/icon-youtube.svg");
     }
+  }
+}
+
+@media (min-width: 960px) {
+  .social {
+    margin-right: 0;
+    padding-top: 5px;
   }
 }
