Добавляет градиент и свг

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,14 +1,14 @@
 @media (min-width: 660px) {
   .copyright {
     padding-top: 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
   }
 
   .copyright__paragraf {
     margin: 0;
     padding: 0;
-  }
-
-  .copyright__paragraf span {
     line-height: 18px;
     font-weight: normal;
     color: #283645;
