--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -3,15 +3,15 @@
   overflow: hidden;
   margin-top: -35px;
   height: 200px;
-  margin-bottom: 20px;
 }
 
 .map__image {
+  box-sizing: content-box;
   position: absolute;
-  top: -445px;
-  left: 0;
-  width: 320px;
-  height: 645px;
+  display: block;
+  width: 100%;
+  max-width: 100%;
+  height: 200px;
   z-index: 1;
 }
 
@@ -20,8 +20,6 @@
   width: 100%;
   border: none;
   position: absolute;
-  top: 0;
-  left: 0;
   z-index: 2;
 }
 
@@ -52,7 +50,7 @@
   .map {
     margin-top: -101px;
     margin-bottom: 67px;
-    height: 500px
+    height: 500px;
   }
 
   .map__image {
