--- a/source/less/blocks/price.less
+++ b/source/less/blocks/price.less
@@ -1,5 +1,8 @@
 .price {
-  background-image: linear-gradient(175.5deg, #ffffff, #ffffff 64px, #f2f2f2 64px, #f2f2f2);
+  background-color: #f2f2f2;
+  background-image: linear-gradient(to bottom right, #ffffff, #ffffff 64px, #f2f2f2 64px, #f2f2f2);
+  background-size: 100% 64px;
+  background-repeat: no-repeat;
   margin-bottom: 40px;
 }
 
@@ -29,7 +32,10 @@
 
 @media (min-width: 960px) {
   .price {
-    background-image: linear-gradient(176deg, #ffffff, #ffffff 88px, #f2f2f2 88px, #f2f2f2);
+    background-color: #f2f2f2;
+    background-image: linear-gradient(to bottom right, #ffffff, #ffffff 88px, #f2f2f2 88px, #f2f2f2);
+    background-size: 100% 88px;
+    background-repeat: no-repeat;
     padding-top: 162px;
     padding-bottom: 54px;
     margin-bottom: 64px;
