--- a/source/less/blocks/main-form.less
+++ b/source/less/blocks/main-form.less
@@ -2,69 +2,94 @@
   margin-top: -70px;
 }
 
-.form__tender {
+.main-form__background {
+  background-image: url("../img/bg-back-mobile@1x.jpg");
+  background-repeat: no-repeat;
+  background-position: 50% 5px;
+  background-size: 100% auto;
+}
+
+.main-form__tender {
   box-sizing: border-box;
   padding-top: 101px;
-  padding-left: 32px;
-  padding-right: 30px;
+  padding-bottom: 54px;
   width: 320px;
-  margin: 0 auto;
-  height: 242px;
-  font-family: "Open Sans", "Arial", sans-serif;
   color: #ffffff;
-  font-weight: 300;
   font-size: 24px;
   line-height: 29px;
   text-align: center;
-  background-image: url("../img/bg-back-tablet@1x.jpg");
-  background-repeat: no-repeat;
-  background-position: -266px 0;
-  background-size: 844px auto;
+}
+
+.main-form__histori {
+  width: 320px;
+  margin-bottom: 20px;
+  padding-top: 45px;
+  color: #283645;
+  font-weight: normal;
+  line-height: 30px;
+  text-align: center;
+}
+
+.main-form__write {
+  display: none;
 }
 
 @media (min-width: 660px) {
   .main-form {
-    margin-top: -110px;
+    margin-top: -114px;
   }
 
-  .form__tender {
-    width: 660px;
-    height: 439px;
-    padding-top: 181px;
+  .main-form__background {
+    background-image: url("../img/bg-back-tablet@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: -268px 4px;
     background-size: 1200px auto;
-    background-position: -269px 0;
+  }
+
+  .main-form__tender {
+    width: 660px;
+    padding-top: 184px;
+    padding-bottom: 81px;
     font-size: 50px;
     line-height: 60px;
   }
-}
 
-.form__histori {
-  width: 280px;
-  margin: 0 auto;
-  padding-top: 44px;
-  padding-left: 20px;
-  padding-right: 20px;
-  font-family: "Open Sans", "Arial", sans-serif;
-  color: #283645;
-  font-weight: normal;
-  font-size: 14px;
-  line-height: 30px;
-  text-align: center;
+  .main-form__histori {
+    width: 560px;
+    margin-bottom: 55px;
+    padding-top: 92px;
+    font-size: 18px;
+  }
 
-  &__write {
-    display: none;
+  .main-form__write {
+    display: block;
   }
 }
 
-@media (min-width: 660px) {
-  .form__histori {
-    width: 500px;
-    padding-top: 94px;
-    font-size: 18px;
+@media (min-width: 960px) {
+  .main-form {
+    margin-top: -3px;
+  }
 
-    &__write {
-      display: block;
-    }
+  .main-form__background {
+    background-image: url("../img/bg-back-desktop@1x.jpg");
+    background-repeat: no-repeat;
+    background-position: -798px 2px;
+    background-size: 2560px auto;
+  }
+
+  .main-form__tender {
+    width: 786px;
+    padding-top: 175px;
+    padding-bottom: 101px;
+  }
+
+  .main-form__histori {
+    width: 820px;
+  }
+
+  .main-form__write {
+    display: inline;
   }
 }
 
