Добавляет главную страницу + БЭМ формы

--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -16,12 +16,15 @@
 
   .copyright__logo {
     position: relative;
+    display: block;
+    margin-top: -10px;
     width: 40px;
+    height: 48px;
   }
 
   .copyright__logo svg {
     position: absolute;
-    top: -12px;
+    top: -5px;
     left: 6px;
     fill: #d22856;
 
@@ -37,15 +40,16 @@
 }
 
 @media (min-width: 960px) {
-  .copyright__paragraf {
-    padding-right: 40px;
+  .copyright {
+    padding-top: 18px;
   }
 
-  .copyright__paragraf span {
+  .copyright__paragraf {
     font-size: 18px;
   }
 
   .copyright__logo svg {
     left: 8px;
+    top: -2px;
   }
 }
