--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -46,7 +46,7 @@
 }
 
 .page-header--nojs {
-  background-color: #283645;
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .page-header__logo {
@@ -64,7 +64,7 @@
   .page-header__logo {
     width: 170px;
     min-height: 109px;
-    padding-top: 26px;
+    padding-top: 24px;
     padding-left: 20px;
   }
 }
