--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,3 +1,44 @@
+.copyright {
+  padding-top: 20px;
+  margin: 0 auto;
+  width: 130px;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.copyright__paragraf {
+  margin: 0;
+  padding: 0;
+  line-height: 18px;
+  font-weight: normal;
+  color: #283645;
+}
+
+.copyright__logo {
+  position: relative;
+  display: block;
+  margin-top: -10px;
+  width: 40px;
+  height: 48px;
+}
+
+.copyright__logo svg {
+  position: absolute;
+  top: -5px;
+  left: 6px;
+  fill: #d22856;
+
+  &:hover,
+  &:focus {
+    fill: #283645;
+  }
+
+  &:active {
+    opacity: 0.3;
+  }
+}
+
 @media (min-width: 660px) {
   .copyright {
     padding-top: 20px;
@@ -41,6 +82,9 @@
 
 @media (min-width: 960px) {
   .copyright {
+    width: 152px;
+    margin-left: 0;
+    margin-right: 0;
     padding-top: 18px;
   }
 
