--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -5,11 +5,622 @@
   margin-top: 13px;
 }
 
+
+.form__personal {
+  box-sizing: border-box;
+  border: none;
+  margin: 0;
+  padding: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 25px;
+}
+
+.form__personal .form__block,
+.form__user-contact .form__block {
+  margin-bottom: 17px;
+}
+
+.form__personal label {
+  padding-left: 23px;
+  font-family: "Open Sans", "Arial", sans-serif;
+  color: #d22856;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.form__personal .form__input,
+.form__user-contact .form__input {
+  margin: 0;
+  margin-top: 5px;
+  width: 280px;
+  height: 63px;
+  padding-left: 20px;
+  color: #283645;
+  font-weight: normal;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-size: 18px;
+  line-height: 30px;
+  border: 2px solid #e5e5e5;
+
+  &:hover,
+  &:focus {
+    border-color: #283645;
+  }
+
+  &:active {
+    border-color: #d22856;
+  }
+}
+
+.form__wrapper--first {
+  padding: 0;
+  padding-top: 10px;
+  background-color: #f2f2f2;
+}
+
+.form__progress {
+  border: none;
+  margin: 0;
+  padding: 0;
+  padding-top: 6px;
+}
+
+.form__progress .form__name {
+  display: block;
+  margin: 0;
+  margin-bottom: 23px;
+  padding-top: 28px;
+  font-family: "Open Sans", "Arial", sans-serif;
+  color: #d22856;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.form__progress .form__block {
+  padding-left: 89px;
+  margin-bottom: 52px;
+
+  &:last-child {
+    margin-bottom: 46px;
+  }
+}
+
+.form__progress .form__mark {
+  position: relative;
+  font-family: "Open Sans", "Arial", sans-serif;
+  color: #283645;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: -7px;
+    left: -69px;
+    width: 39px;
+    height: 39px;
+    background-color: #ffffff;
+    border: 2px solid #e5e5e5;
+  }
+
+  &:hover::before,
+  &:focus::before {
+    border: 2px solid #283645;
+  }
+
+  &:active::before {
+    border: 2px solid #d22856;
+  }
+}
+
+.form__btn:checked + .form__mark[for="selfie-shark"]::after,
+.form__btn:checked + .form__mark[for="burn-beach"]::after,
+.form__btn:checked + .form__mark[for="see-chack"]::after,
+.form__btn:checked + .form__mark[for="souvenir"]::after,
+.form__btn:checked + .form__mark[for="tower"]::after,
+.form__btn:checked + .form__mark[for="smash"]::after {
+  content: "";
+  position: absolute;
+  top: 4px;
+  left: -59px;
+  width: 22px;
+  height: 10px;
+  border: 2px solid #d22856;
+  border-top-color: transparent;
+  border-right-color: transparent;
+  transform: rotate(-45deg);
+}
+
+.form__user-contact {
+  border: none;
+  margin: 0;
+  margin-top: 20px;
+}
+
+.form__user-contact label {
+  padding-left: 23px;
+  font-family: "Open Sans", "Arial", sans-serif;
+  color: #d22856;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 30px;
+  text-transform: uppercase;
+}
+
+.form__user-contact .form__name {
+  display: none;
+}
+
+.form__wrapper--second {
+  margin-top: 25px;
+  padding: 0;
+  padding-top: 37px;
+  padding-bottom: 2px;
+  background-color: #f2f2f2;
+}
+
+.form__app {
+  border: none;
+  margin: 0;
+  padding: 0;
+}
+
+.form__app legend {
+  display: block;
+  width: 189px;
+  font-family: "Open Sans", "Arial", sans-serif;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 18px;
+  font-weight: normal;
+  color: #d22856;
+}
+
+.form__app .form__block {
+  margin-top: 40px;
+  margin-bottom: 45px;
+}
+
+.form__app .form__mark {
+  position: relative;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+  color: #283645;
+  margin-top: 20px;
+  padding-top: 20px;
+  padding-left: 90px;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 13px;
+    left: 20px;
+    width: 39px;
+    height: 39px;
+    border: 2px solid #e5e5e5;
+    border-radius: 50%;
+    background-color: #ffffff;
+    cursor: pointer;
+  }
+
+  &:hover::before,
+  &:focus::before {
+    border-color: #283645;
+  }
+
+  &:active::before {
+    border-color: #d22856;
+  }
+}
+
+.form__btn:checked + .form__mark[for="app-ios"]::after,
+.form__btn:checked + .form__mark[for="app-android"]::after,
+.form__btn:checked + .form__mark[for="app-windows"]::after {
+  content: "";
+  position: absolute;
+  top: 25px;
+  left: 32px;
+  width: 15px;
+  height: 15px;
+  background-color: #d22856;
+  border-radius: 50%;
+}
+
+.form__post {
+  border: none;
+  margin: 0;
+  margin-top: 32px;
+  padding: 0;
+}
+
+.form__name {
+  margin-top: 32px;
+  margin-bottom: 10px;
+  width: 320px;
+  font-family: "Open Sans", "Arial", sans-serif;
+  text-transform: uppercase;
+  font-size: 14px;
+  line-height: 30px;
+  font-weight: normal;
+  color: #d22856;
+  text-align: center;
+}
+
+.form__textarea {
+  width: 280px;
+  margin-left: 20px;
+  padding-top: 14px;
+  padding-left: 18px;
+  border: 2px solid #e5e5e5;
+  font-family: "Open Sans", "Arial", sans-serif;
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: normal;
+  color: #283645;
+
+  &:hover,
+  &:focus {
+    border-color: #283645;
+  }
+
+  &:active {
+    border-color: #d22856;
+  }
+}
+
+.form__button {
+  margin-top: 44px;
+  margin-left: 20px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  width: 280px;
+  background-color: #2aab6d;
+  border: none;
+  border-radius: 3px;
+  text-transform: uppercase;
+  color: #ffffff;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+  cursor: pointer;
+
+  &:hover,
+  &:focus {
+    background-color: #1c9b5e;
+  }
+
+  &:active {
+    background-color: #1c9b5e;
+    color: #61b98f;
+  }
+
+  &:disabled {
+    color: #ffffff;
+    background-color: #e5e5e5;
+  }
+}
+
+.form__required {
+  margin-top: 35px;
+  font-weight: normal;
+  line-height: 30px;
+  color: #283645;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.form__required span {
+  color: #d22856;
+}
+
+.form__required-dop {
+  display: none;
+}
+
 @media (min-width: 660px) {
   .form {
     width: 660px;
-    margin-top: 46px;
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 87px;
+  }
+
+  .form__personal {
+    flex-grow: 1;
+    order: 1;
+    padding-bottom: 13px;
+  }
+
+  .form__personal label {
+    padding-left: 0;
+    padding-right: 19px;
+    padding-top: 6px;
+  }
+
+  .form__personal .form__input {
+    width: 100%;
+    height: 62px;
+    flex-grow: 1;
+    margin-top: 0;
+  }
+
+  .form__personal .form__block {
+    display: flex;
+    margin-bottom: 53px;
+    max-height: 65px;
+    align-items: center;
+
+    &:nth-of-type(3) {
+      margin-bottom: 45px;
+    }
+  }
+
+  .form__wrapper--first {
+    order: 4;
+    margin-top: 48px;
+    padding-left: 20px;
+    background-color: #ffffff;
+  }
+
+  .form__progress {
+    border: 2px solid #e5e5e5;
+    width: 620px;
+    margin-bottom: 50px;
+    padding-top: 0;
+    padding-bottom: 7px;
+  }
+
+  .form__progress .form__block {
+    padding-left: 117px;
+  }
+
+  .form__progress .form__name {
+    padding-top: 0;
+    margin-bottom: 33px;
+    width: 432px;
+  }
+
+  .form__progress br {
+    display: none;
+  }
+
+  .form__progress .form__mark {
+    &::before {
+      left: -59px;
+    }
+  }
+
+  .form__btn:checked + .form__mark[for="selfie-shark"]::after,
+  .form__btn:checked + .form__mark[for="burn-beach"]::after,
+  .form__btn:checked + .form__mark[for="see-chack"]::after,
+  .form__btn:checked + .form__mark[for="souvenir"]::after,
+  .form__btn:checked + .form__mark[for="tower"]::after,
+  .form__btn:checked + .form__mark[for="smash"]::after {
+    left: -50px;
+  }
+
+  .form__user-contact {
+    order: 3;
+    min-width: 537px;
+    border: 2px solid #e6e6e6;
+    display: flex;
+    margin-top: 56px;
+    margin-left: 20px;
+    margin-right: 20px;
+    flex-grow: 1;
+    padding-top: 22px;
+    padding-left: 59px;
+    padding-bottom: 2px;
+  }
+
+  .form__user-contact label {
+    padding-left: 19px;
+    padding-top: 10px;
+  }
+
+
+  .form__user-contact .form__name {
+    display: block;
+    width: 260px;
+    text-align: center;
+    font-family: "Open Sans", "Arial", sans-serif;
+    text-transform: uppercase;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 20px;
+    color: #d22856;
+  }
+
+  .form__user-contact .form__block {
+    display: flex;
+    flex-direction: column-reverse;
+    margin-top: 0;
+    margin-bottom: 24px;
+  }
+
+  .form__user-contact .form__input {
+    width: 500px;
+    padding-left: 18px;
+  }
+
+  .form__wrapper--second {
+    order: 2;
+    width: 660px;
+    margin: 0;
+    padding: 0;
+    padding-left: 20px;
+    padding-right: 20px;
+    background-color: #ffffff;
+  }
+
+  .form__app {
+    border: 2px solid #e5e5e5;
+    padding-top: 8px;
+    padding-left: 39px;
+    padding-bottom: 14px;
+  }
+
+  .form__app legend {
+    width: 368px;
+  }
+
+  .form__app .form__mark {
+    padding-left: 80px;
+  }
+
+  .form__post {
+    order: 5;
+    border: 2px solid #e6e6e6;
+    width: 620px;
+    margin: 0 auto;
+    margin-bottom: 23px;
+    padding-left: 58px;
+    padding-right: 58px;
+    padding-top: 22px;
+    padding-bottom: 48px;
+  }
+
+  .form__post .form__name {
+    width: 265px;
+  }
+
+  .form__textarea {
+    width: 500px;
+    height: 193px;
+    margin-left: 0;
+    padding-top: 14px;
+    padding-left: 18px;
+    font-size: 18px;
+  }
+
+  .form__button {
+    order: 6;
+    width: 300px;
+  }
+
+  .form__required {
+    order: 7;
+    margin-top: 62px;
+    margin-left: 136px;
+  }
+}
+
+@media (min-width: 960px) {
+  .form {
+    width: 960px;
+    margin-bottom: 70px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  .form__personal {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .form__personal .form__block {
+    width: 436px;
+  }
+
+  .form__wrapper--second {
+    width: 435px;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .form__app {
+    padding-top: 9px;
+    padding-left: 55px;
+    padding-bottom: 14px;
+  }
+
+  .form__user-contact {
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 0;
+    padding-top: 18px;
+    padding-bottom: 0;
+  }
+
+  .form__user-contact .form__blocks {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .form__user-contact .form__block {
+    margin-bottom: 13px;
+  }
+
+  .form__blocks .form__block:nth-of-type(2) {
+    margin-right: 45px;
+  }
+
+  .form__user-contact .form__input {
+    width: 375px;
+  }
+
+  .form__wrapper--first {
+    padding-left: 0;
+  }
+
+  .form__progress {
+    width: 940px;
+    margin-bottom: 52px;
+    padding-bottom: 0;
+  }
+
+  .form__progress-wrapper {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    height: 185px;
+    padding-right: 60px;
+  }
+
+  .form__progress .form__block {
+    margin-bottom: 38px;
+  }
+
+  .form__post {
+    width: 940px;
+    padding-top: 18px;
+    padding-bottom: 40px;
+  }
+
+  .form__textarea {
+    width: 820px;
+    height: 128px;
+    margin-left: 0;
+    padding-top: 14px;
+  }
+
+  .form__button {
+    margin-left: 0;
+  }
+
+  .form__required {
+    margin-top: 60px;
+    margin-left: 320px;
+  }
+
+  .form__required .form__required-dop {
+    display: inline;
+    margin-top: 35px;
+    font-weight: normal;
+    line-height: 30px;
+    text-transform: uppercase;
+    text-align: center;
+    color: #283645;
   }
 }
