--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -2,6 +2,26 @@
   display: none;
 }
 
+.page-footer--active {
+  display: block;
+  margin-top: 57px;
+}
+
+.page-footer__logo {
+  display: block;
+  width: 280px;
+  text-align: center;
+  margin-bottom: 35px;
+}
+
+.page-footer__logo-tablet {
+  display: block;
+}
+
+.page-footer__logo-desktop {
+  display: none;
+}
+
 @media (min-width: 660px) {
   .page-footer {
     display: block;
