--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,11 +1,55 @@
+.social {
+  width: 178px;
+  .reset_ul();
+  margin: 0 auto;
+  margin-bottom: 25px;
+  display: flex;
+  flex-wrap: wrap;
+  padding-top: 3px;
+}
+
+.social__item {
+  margin-right: 13px;
+
+  &:nth-of-type(3) {
+    margin-right: 0;
+  }
+}
+
+.social__link {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 3px solid #e9ebec;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  &:hover,
+  &:focus {
+    border: 3px solid #283645;
+  }
+
+  &:active {
+    opacity: 0.2;
+  }
+
+  &--twitter {
+    background-image: url("../img/icon-twitter.svg");
+  }
+
+  &--facebook {
+    background-image: url("../img/icon-facebook.svg");
+  }
+
+  &--youtube {
+    background-image: url("../img/icon-youtube.svg");
+  }
+}
+
 @media (min-width: 660px) {
   .social {
-    width: 178px;
-    .reset_ul();
-    margin-right: 91px;
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: 3px;
+    margin-right: 89px;
   }
 
   .social__item {
@@ -51,6 +95,7 @@
 @media (min-width: 960px) {
   .social {
     margin-right: 0;
+    margin-left: 0;
     padding-top: 5px;
   }
 }
