--- a/source/less/style.less
+++ b/source/less/style.less
@@ -10,12 +10,7 @@
 @import "blocks/button.less";
 @import "blocks/icon-list.less";
 @import "blocks/advantages.less";
-@import "blocks/main-form.less";
-@import "blocks/form__personal.less";
-@import "blocks/progress.less";
-@import "blocks/user-contact.less";
-@import "blocks/app.less";
-@import "blocks/post.less";
+@import "blocks/form.less";
 @import "blocks/timer.less";
 @import "blocks/reviews.less";
 @import "blocks/slider.less";
@@ -27,3 +22,5 @@
 @import "blocks/page-footer.less";
 @import "blocks/social.less";
 @import "blocks/copyright.less";
+@import "blocks/form-title.less";
+@import "blocks/histori.less";
